cmake (2.8.0-4) UNRELEASED; urgency=low

  * Update bootstraptest_increase_timeout.diff with upstream version. My
    previous patch didn't work.
  * Revert previous "Build with g++-4.4 on hppa" change. It was not needed, build
    with default compiler on hppa.

 -- Modestas Vainius <modestas@vainius.eu>  Mon, 23 Nov 2009 19:44:53 +0200

cmake (2.8.0-3) unstable; urgency=medium

  * Set HOME to current build directory when running test suite. This should
    fix failures of kwsys.testRegistry and FindPackageTest tests on the
    buildds.
  * Increase timeout of BootstrapTest to 2 hours so it no longer times out
    on s390 or armel (patch bootstraptest_increase_timeout.diff).
  * Fix GNU.cmake file used on Hurd. Thanks to Pino Toscano for the patch.
  * Build with g++-4.4 on hppa. May solve FTBFS (segfault likely due to
    miscompilation) reported in #556653.
  * Urgency medium due to likely RC bug fix (#556653).

 -- Modestas Vainius <modestas@vainius.eu>  Sun, 22 Nov 2009 20:49:29 +0200

cmake (2.8.0-2) experimental; urgency=low

  * Reenable test suite.

 -- Modestas Vainius <modestas@vainius.eu>  Sun, 22 Nov 2009 00:38:54 +0200

cmake (2.8.0-1) unstable; urgency=low

  * New upstream release.
  * Disable test suite for now.

 -- Modestas Vainius <modestas@vainius.eu>  Sat, 14 Nov 2009 01:59:25 +0200

cmake (2.8.0~rc6-1) experimental; urgency=low

  * New upstream development release.
  * Switch debian/rules to use dh v7:
    - bump debhelper build depends to 7.3;
    - also drop unused Dart handling in the process;
    - enable test suite.
  * Add myself as Maintainer, A. Maitland Bottoms as Uploader (with
    permission).

 -- Modestas Vainius <modestas@vainius.eu>  Tue, 10 Nov 2009 23:46:25 +0200

cmake (2.8.0~rc5-1) experimental; urgency=low

  * New upstream development release.
    - FindJNI.cmake does no longer get confused about multiple JVM installs
      (Closes: #553151).
  * Switch to dpkg-source format 3.0 (quilt):