@@ -4,6 +4,8 @@ cmake (2.8.0-4) UNRELEASED; urgency=low
     previous patch didn't work.
   * Revert previous "Build with g++-4.4 on hppa" change. It was not needed, build
     with default compiler on hppa.
+  * Remove obsolete hack for parisc64 from debian/rules. It didn't work after
+    switch to dh v7 anyway.
 
  -- Modestas Vainius <modestas@vainius.eu>  Mon, 23 Nov 2009 19:44:53 +0200
 
